@@ -1,3 +1,8 @@
+(26/05/15)
+==========
+
+· Added server > Nagios
+
 (23/05/15)
 ==========
 
